[project]
name = "xai606"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython<3",
    "d4rl>=1.1",
    "flax>=0.9.0",
    "hydra-core>=1.3.2",
    "jax[cuda12]>=0.4.33",
    "mjrl",
    "numpy<2",
]

[tool.uv.sources]
mjrl = { git = "https://github.com/aravindr93/mjrl.git", rev = "3871d93" }
